# challenge-stack-sesame

./: README.md
.github/workflows/: main.yml
back/: .env.example  .gitignore  Cargo.toml  README.md  diesel.toml  docker-compose.yaml  prometheus.yml
back/migrations/2024-07-16-100542_user/: up.sql
back/migrations/2024-07-16-100705_toilet/: down.sql  up.sql
back/migrations/2024-07-16-100757_logs/: up.sql
back/migrations/2024-07-16-100813_feedback/: down.sql  up.sql
back/migrations/2024-07-16-100827_role/: down.sql  up.sql
back/migrations/2024-07-16-100836_access/: up.sql
back/migrations/2024-07-16-105721_relations/: up.sql
back/migrations/2024-07-17-125923_roles/: down.sql  up.sql
back/migrations/2024-07-18-090116_fix-score/: down.sql  up.sql
back/migrations/2024-07-18-122421_more-feedback-score/: up.sql
back/src/: main.rs  schema.patch  schema.rs
back/src/controllers/: auth_controllers.rs  feedback_controllers.rs  hello_world_controllers.rs  mod.rs  role_controllers.rs  stat_controllers.rs  toilet_controllers.rs  users_controllers.rs
back/src/middlewares/: auth_middleware.rs
back/src/models/: access.rs  auth.rs  feedback.rs  logs.rs  mod.rs  role.rs  toilet.rs  toiletStatus.rs  users.rs
back/src/services/: auth_services.rs  authentification_service.rs  feedback_services.rs  hello_world_service.rs  mod.rs  role_services.rs  stat_services.rs  toilet_services.rs  users_services.rs  websocket_service.rs
back/src/websocket/: websocket.rs
front/: .env.example  .gitignore  pubspec.yaml
front/lib/: main.dart
front/linux/: CMakeLists.txt
(+31 files in other folders)
