[package]
name = "back-sesame"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-web = "4.8.0"
diesel = { version = "2.2.1", features = ["postgres", "r2d2", "chrono", "uuid"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
oauth2 = "4.4.2"
r2d2 = "0.8.10"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
postgis_diesel = { version = "2.4.0", features = ["serde"] }
actix-web-actors = "4.3.0"
actix = "0.13.5"
log = "0.4.22"
awc = "3.5.0"
futures-util = "0.3.30"
tokio = { version = "1.38.1", features = ["full"] }
tokio-stream = "0.1.15"
futures = "0.3.30"
actix-service = "2.0.2"
reqwest = { version = "0.12.5", features = ["json"] }
